Replace deprecated API java.lang.Class.newInstance()